added user session

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueup/vue-quill": "^1.2.0",
     "axios": "^1.5.1",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
